--- a/FSModToolsManager/Properties/Resources.resx
+++ b/FSModToolsManager/Properties/Resources.resx
@@ -154,4 +154,16 @@
   <data name="fstm" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\fstm.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="notpinned_hover" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\notpinned_hover.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="notpinned_normal" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\notpinned_normal.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="pinned_hover" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\pinned_hover.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="pinned_normal" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\pinned_normal.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
